syntax = "proto3";

package Protocol;
option csharp_namespace = "Google.Protobuf.Protocol";

enum EObjectState 
{
	EOBJECT_STATE_NONE = 0;
	EOBJECT_STATE_IDLE = 1;
	EOBJECT_STATE_MOVE = 2;
	EOBJECT_STATE_DEAD = 3;
}

enum ETetrominoState
{
	ETETROMINO_STATE_NONE = 0;
	ETETROMINO_STATE_DOWN_MOVING = 1;
	ETETROMINO_STATE_LEFT_MOVING = 2;
	ETETROMINO_STATE_RIGHT_MOVING = 3;
	ETETROMINO_STATE_ROTATING = 4;
	ETETROMINO_STATE_DROPPING = 5;
	ETETROMINO_STATE_LOCKED = 6;
}

enum EGameObjectType 
{
	EGAME_OBJECT_TYPE_NONE = 0;
	EGAME_OBJECT_TYPE_TETROMINO = 1;
}

enum ERoomState
{
	EROOM_STATE_WAITING = 0;
	EROOM_STATE_IN_PROGRESS = 1;
	EROOM_STATE_FINISHED = 2;
}
